tests/ucc/type/bad/non-scalar-do-while.c
struct a
{
    int a;
};

int main(void)
{
    struct a a;

    do
    {

    }
    while (a);

    return 0;
}
